--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-top: 1vh;
     background-color: rgb(252, 206, 0);
 
 
@@ -143,7 +144,6 @@
 
 .section-3-div1 h1:hover {
     filter: saturate(2);
-    cursor: pointer;
 }
 
 .section-3-div2 {
@@ -307,14 +307,20 @@
 
 /*                Footer                   */
 
-.footer {
+footer {
     width: 100%;
     display: flex;
-    justify-content: space-around;
-    margin-top: 5vh;
-    padding-top: 5vh;
-    padding-bottom: 2vh;
+    align-items: center;
+    justify-content: center;
     background-color: rgb(216, 216, 216);
+}
+
+
+.footer {
+    display: flex;
+    width: 100%;
+    margin-top: 2vh;
+    padding: 2vh;
 }
 
 .footer-div1 {
@@ -389,7 +395,7 @@ h5 {
 
 .card {
   margin-top: 2vh;  
-  padding: 2vh;
+  padding: 1vh;
   border-radius: 5vh;
 }
 
@@ -442,6 +448,123 @@ h5 {
 .hc {
     margin-top: 2vh;
 }
+
+.ac {
+    padding-top: 5vh;
+}
+
+/*               Sectio Sobre                */
+
+
+
+.sobreheader {
+    background-color: black;
+    padding-top: 1vh;
+    padding-bottom: 1vh
+    ;
+    border-bottom: 1px solid #8A05BE;
+
+}
+
+
+.sectionsobre {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 90.3vh;
+    background-image: linear-gradient(180deg, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.8) 13%), url(img/gif-background.webp);
+    background-size: auto;
+}
+
+.sobregeral {
+    width: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid red;
+}
+
+.sectionsobre-div {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.info-perfil img {
+    width: 15vh;
+    border-radius: 50vh;
+}
+
+.info-perfil {
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+}
+
+.info-info {
+    color: white;
+    width: 100%;
+    display: flex;
+    justify-content: start;    
+    align-items: center;
+    color: white;
+    margin-top: 2vh;
+}
+
+
+.sectionsobre-div h1 {
+    color: white;
+}
+
+
+
+.info-info h3{
+    font-size: 1.5vh;
+    margin-right: 3vh;
+}
+
+.info-info img {
+    width: 5vh;
+    margin-right: 3vh;
+}
+
+
+
+
+
+
+
+
+
+/* Footer sobre */
+
+.sb{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(0, 0, 0);
+    border-top: 1px solid #8A05BE;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -585,11 +708,18 @@ h5 {
         padding-top: 20vh;
     }
 
+    .sectionacai-1 div h1 {
+        font-size: 10vh;
+    }
+
     /* Pagina produto cupuacu */
 
     .sectioncupuacu-1 {
         padding-top: 20vh;
     }
 
+    .sectioncupuacu-1 div h1 {
+        font-size: 10vh;
+    }
 
 }
