--- a/style.css
+++ b/style.css
@@ -460,8 +460,7 @@ h5 {
 .sobreheader {
     background-color: black;
     padding-top: 1vh;
-    padding-bottom: 1vh
-    ;
+    padding-bottom: 1vh;
     border-bottom: 1px solid #8A05BE;
 
 }
@@ -473,18 +472,22 @@ h5 {
     align-items: center;
     flex-direction: column;
     width: 100%;
-    height: 90.3vh;
-    background-image: linear-gradient(180deg, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.8) 13%), url(img/gif-background.webp);
+    height: 95vh;
+    background-image: linear-gradient(180deg, rgba(0,0,0,0.8) 0%, rgba(0, 0, 0, 0.856) 13%), url(img/gif-background.webp);
     background-size: auto;
 }
 
 .sobregeral {
-    width: 100vh;
+    width: 50%;
+    height: auto;
+    padding: 4vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px solid red;
+    border: 2px solid #8a05be75;
+    border-radius: 3vh;
+    background-color: rgba(0, 0, 0, 0.685);
 }
 
 .sectionsobre-div {
@@ -526,16 +529,48 @@ h5 {
 
 
 .info-info h3{
-    font-size: 1.5vh;
-    margin-right: 3vh;
+    font-size: 1.8vh;
+    margin-left: 3vh;
 }
 
-.info-info img {
-    width: 5vh;
-    margin-right: 3vh;
+.ion-info {
+    font-size: 4vh;
+    color: #8A05BE;
 }
 
+.ion-info:hover {
+    font-size: 4vh;
+    color: #a602db;
+}
 
+.spinner-border {
+    margin-left: 2vh;
+}
+
+.info-git {
+    font-size: 1.8vh;
+    margin-left: 1vh;
+    text-decoration: none;
+    color: #a602db;
+}
+
+.info-git:hover {
+    color: #bf00ff;
+}
+
+.ion-info.smile {
+    font-size: 4vh;
+    padding-top: 2vh ;
+    color: #b704f3;
+}
+
+.spinner-border {
+    color: #a602db;
+    font-size: 20px;
+    padding: 1vh;
+    width: 3vh;
+    height: 3vh;
+}
 
 
 
@@ -598,9 +633,18 @@ h5 {
         width: 100%;
         margin-bottom: 20px;
     }
+    
+    .section-1 div img {
+        width: 12vh;
+        padding-bottom: 1vh;
+    }
 
     .section-1-div3 {
         padding-top: 2vh;
+    }
+
+    .section-2 {
+        padding-top: 1.5vh;
     }
 
     .section-3-div1 h1 {
@@ -720,6 +764,47 @@ h5 {
 
     .sectioncupuacu-1 div h1 {
         font-size: 10vh;
+    }
+
+    /* Sobre */
+
+    .sectionsobre {
+        padding-top: 15vh;
+    }
+
+    .sobregeral {
+        width: 90%;
+    }
+
+    .ion-info {
+        font-size: 2vh;
+    }
+
+    .ion-info:hover {
+        font-size: 2vh;
+        color: #a602db;
+    }
+
+    .info-info h3 {
+        font-size: 1.3vh;
+    }
+
+    .info-git {
+        font-size: 1.3vh;
+    }
+
+    .ion-info.smile {
+        font-size: 4vh;
+        padding-top: 2vh ;
+        color: #a602db;
+    }
+
+    .spinner-border {
+        color: #a602db;
+        font-size: 20px;
+        padding: 0.5vh;
+        width: 0.5vh;
+        height: 0.5vh;
     }
 
 }
