--- a/style.css
+++ b/style.css
@@ -350,7 +350,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url(img/backgroundaçai.png);
+    background-image: url(img/backgroundacai.png);
     background-size: cover;
     text-align: center;
 }
